Fixed the navbar and footer navigation links for the new structure

--- a/OnlyPan/Views/Shared/_Layout.cshtml
+++ b/OnlyPan/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg bg-[var(--black)] navbar-page">
             <div class="container-fluid justify-content-center lg:justify-between text-center   ">
                 <!--Logo-->
-                <a class="navbar-brand lg:text-3xl logo font-bold text-amber-600 hover:text-amber-300 align-center" asp-area="" asp-controller="Home"
+                <a class="navbar-brand lg:text-3xl logo font-bold text-amber-600 hover:text-amber-300 align-center" asp-area="" asp-controller="Recipes"
                    asp-action="Index">
                     Only<span class="logo2">Pan</span>
                 </a>
@@ -25,7 +25,7 @@
                 <div class="navbar-collapse flex justify-center text-center lg:justify-start">
                     <ul class="navbar-nav flex lg:flex-row sm:flex-col items-center">
                         <li class="nav-item font-bold ">
-                            <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] nav-title rounded-md lg:px-3 py-2 flex flex-row gap-2" asp-area="" asp-controller="Home" asp-action="Index">
+                            <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] nav-title rounded-md lg:px-3 py-2 flex flex-row gap-2" asp-area="" asp-controller="Recipes" asp-action="Index">
                                 <!--
                                          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                          <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"/>
@@ -35,7 +35,7 @@
                             </a>
                         </li>
                         <li class="nav-item font-bold">
-                            <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] nav-title rounded-md px-3 py-2 flex flex-row gap-2" asp-area="" asp-controller="Home" asp-action="Bio">
+                            <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] nav-title rounded-md px-3 py-2 flex flex-row gap-2" asp-area="" asp-controller="Home" asp-action="Index">
                                 ¿Quienes Somos?
                                 <!--
 
@@ -45,11 +45,6 @@
                                 </svg>
                                     -->
 
-                            </a>
-                        </li>
-                        <li class="nav-item font-bold">
-                            <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] nav-title rounded-md px-3 py-2 flex flex-row gap-2" asp-area="" asp-controller="Recipes" asp-action="Index">
-                                Recetas
                             </a>
                         </li>
                         @if (Context.User.IsInRole("2") || Context.User.IsInRole("3"))
@@ -192,7 +187,7 @@
     <footer class="bg-black text-center dark:bg-black lg:text-left flex  flex-col lg:flex-row justify-center lg:justify-between ">
         <div class=" m-3 pl-10 pt-2">
             <!--Logo-->
-            <a class="navbar-brand lg:text-3xl logo font-bold text-amber-600 hover:text-amber-300" asp-area="" asp-controller="Home"
+            <a class="navbar-brand lg:text-3xl logo font-bold text-amber-600 hover:text-amber-300" asp-area="" asp-controller="Recipes"
                asp-action="Index">
                 Only<span class="logo2">Pan</span>
             </a>
@@ -201,7 +196,7 @@
         <div class="p-4 text-center text-neutral-700 dark:text-neutral-200">
             <ul class="flex lg:flex-row flex-col items-center space-x-1.5">
                 <li class="nav-item font-bold">
-                    <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] nav-title rounded-md px-3 py-2 flex flex-row gap-2 " asp-area="" asp-controller="Home" asp-action="Index">
+                    <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] nav-title rounded-md px-3 py-2 flex flex-row gap-2 " asp-area="" asp-controller="Recipes" asp-action="Index">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
                         </svg>
@@ -210,20 +205,11 @@
                     </a>
                 </li>
                 <li class="nav-item font-bold">
-                    <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] nav-title rounded-md px-3 py-2 flex flex-row gap-2 " asp-area="" asp-controller="Home" asp-action="Bio">
+                    <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] nav-title rounded-md px-3 py-2 flex flex-row gap-2 " asp-area="" asp-controller="Home" asp-action="Index">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9 5.25h.008v.008H12v-.008z" />
                         </svg>
                         ¿Quienes Somos?
-
-      
-
-
-                    </a>
-                </li>
-                <li class="nav-item font-bold">
-                    <a class="nav-link text-[var(--second-color)] hover:text-[var(--white)] nav-title rounded-md px-3 py-2 flex flex-row gap-2 " asp-area="" asp-controller="Recipes" asp-action="Index">
-                        Recetas
                     </a>
                 </li>
             </ul>
